--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             display: flex;
             align-items: center;
             padding-left: 20px;
-            z-index: 10;
+            z-index: 10; 
+            flex-wrap: wrap;
         }
         #dieuhuong img {
             margin-right: 15px;
